[project]
name = "adhd-self-eval"
version = "0.1.0"
description = "Scientific ADHD self-evaluation webapp"
authors = [
    {name = "Diagnostic Tool"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "weasyprint (>=67.0,<68.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
